<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GallowsFragment">

    <ImageView
        android:id="@+id/gallows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063"></ImageView>

    <TextView
        android:id="@+id/word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/word"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.386" />

    <android.widget.Button
        android:id="@+id/a"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:text="@string/A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.579" />

    <android.widget.Button
        android:id="@+id/b"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:text="@string/B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.292"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.579" />

    <android.widget.Button
        android:id="@+id/c"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:text="@string/C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.579" />

    <android.widget.Button
        android:id="@+id/d"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:text="@string/D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.713"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.579" />

    <android.widget.Button
        android:id="@+id/e"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:text="@string/E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.579" />

    <android.widget.Button
        android:id="@+id/f"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:text="@string/F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.652" />

    <android.widget.Button
        android:id="@+id/g"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:text="@string/G"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.292"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.652" />

    <android.widget.Button
        android:id="@+id/h"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:text="@string/H"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.652" />

    <android.widget.Button
        android:id="@+id/i"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:text="@string/I"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.713"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.652" />

    <android.widget.Button
        android:id="@+id/j"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:text="@string/J"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.652" />

    <android.widget.Button
        android:id="@+id/k"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:text="@string/K"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.721" />

    <android.widget.Button
        android:id="@+id/l"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:text="@string/L"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.292"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.721" />

    <android.widget.Button
        android:id="@+id/m"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:text="@string/M"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.721" />

    <android.widget.Button
        android:id="@+id/n"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:text="@string/N"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.713"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.721" />

    <android.widget.Button
        android:id="@+id/o"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:text="@string/O"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.721" />

    <android.widget.Button
        android:id="@+id/p"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:text="@string/P"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.793" />

    <android.widget.Button
        android:id="@+id/q"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:text="@string/Q"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.292"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.793" />

    <android.widget.Button
        android:id="@+id/r"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:text="@string/R"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.793" />

    <android.widget.Button
        android:id="@+id/s"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:text="@string/S"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.713"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.793" />

    <android.widget.Button
        android:id="@+id/t"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:text="@string/T"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.793" />


    <android.widget.Button
        android:id="@+id/u"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:text="@string/U"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.863" />

    <android.widget.Button
        android:id="@+id/v"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:text="@string/V"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.292"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.863" />

    <android.widget.Button
        android:id="@+id/w"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:text="@string/W"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.863" />

    <android.widget.Button
        android:id="@+id/x"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:text="@string/X"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.713"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.863" />

    <android.widget.Button
        android:id="@+id/y"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:text="@string/Y"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.863" />

    <android.widget.Button
        android:id="@+id/z"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:text="@string/Z"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931" />
</androidx.constraintlayout.widget.ConstraintLayout>