<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_fon1_menu"
    tools:context=".main.MenuFragment">

    <TextView
        android:id="@+id/tvText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:textColor="#DCCA2E"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/choose_a_game"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/button_blackjack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="90dp"
        android:layout_marginTop="170dp"
        android:background="@drawable/shape_rounded_footer"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/blackjack"
        android:backgroundTint="#DCCA2E"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvText" />

    <android.widget.Button
        android:id="@+id/button_gallows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="90dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/shape_rounded_footer"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/viselica"
        android:backgroundTint="#DCCA2E"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_blackjack" />

    <android.widget.Button
        android:id="@+id/button_memory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="90dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/shape_rounded_footer"
        android:backgroundTint="#DCCA2E"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/memory"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_gallows" />

    <android.widget.Button
        android:id="@+id/button_tic_tac_toe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="90dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/shape_rounded_footer"
        android:fontFamily="@font/nunito_bold"
        android:backgroundTint="#DCCA2E"
        android:text="@string/tic_tac_toe"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_memory" />
</androidx.constraintlayout.widget.ConstraintLayout>